<resources>
    <string name="app_name">NikY</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="searchHint">جستجو</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">افزودن نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="addToCart">اضافه کردن به سبد خرید</string>
    <string name="productList">لیست محصولات</string>
    <string name="sortBy">مرتب سازی بر اساس</string>
    <string name="sortLatestProduct">جدیدترین</string>
    <string name="sortPopularProduct">پربازدیدترین</string>
    <string name="sortPriceHighToLowProduct">گران ترین</string>
    <string name="sortPriceLowToHighProduct">ارزان ترین</string>
    <string name="timeoutExceptionMessage">دریافت اطلاعات با مشکل روبرو شد!</string>
    <string name="errorReceivingInformation">خطایی در دریافت اطلاعات به وجود آمد!</string>
    <string name="snackbarExceptionMessage">خطای نامشخص</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="addToCartSuccessfully">محصول با موفقیت به سبد خرید اضافه شد!</string>
    <string name="signInToAccount">ورود به حساب کاربری</string>
    <string name="enterEmailAndPassword">لطفا ایمیل و رمز عبور خود را وارد کنید</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="singIn">ورود</string>
    <string name="doHaveNotAnAccount">حساب کاربری ندارید؟</string>
    <string name="pleaseSignUp">ثبت نام کنید</string>
    <string name="signUpToAccount">ایجاد حساب کاربری</string>
    <string name="signUp">ثبت نام</string>
    <string name="doYouHaveAccount">قبلا ثبت نام کرده اید؟</string>
    <string name="pleaseSignIn">وارد حساب کاربری خود شوید</string>
    <string name="pleaseEnterEmail">لطفا ایمیل خود را وارد نمایید!</string>
    <string name="pleaseEnterValidEmail">لطفا ایمیل معتبر وارد نمایید!</string>
    <string name="pleaseEnterPassword">لطفا رمز عبور خود را وارد نمایید!</string>
    <string name="signInSuccessfully">ورود شما با موفقیت انجام شد!</string>
    <string name="signUpSuccessfully">ثبت نام شما با موفقیت انجام شد!</string>
    <string name="signUpUsernameErrorMessage">این نام کاربری قبلا ثبت شده است!</string>
    <string name="onlyPasswordsLongerThan8CharIsValid">رمز عبور شما باید بیشتر از هشت رقم باشد!</string>
    <string name="waitingForInternetConnection">در انتظار شبکه...</string>
    <string name="connectionSuccessfully">اتصال برقرار شد</string>
    <string name="pleaseCheckYourInternetConnection">لطفا اتصال اینترنت خود را بررسی کنید!</string>
    <string name="usernameOrPasswordIsIncorrect">نام کاربری و یا پسورد صحیح نمی باشد!</string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="increaseCartItemError">تعداد محصول نمی تواند بیشتر از 5 عدد باشد!</string>
    <string name="decreaseCartItemError">تعداد محصول نمی تواند کمتر از 1 عدد باشد!</string>
    <string name="nothingForShowHere">هیچ خبری اینجا نیست!</string>
    <string name="shippingInformationToolbarTitle">مشخصات تحویل گیرنده و شیوه پرداخت</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره تلفن</string>
    <string name="address">آدرس</string>
    <string name="postalCodeHelper">لطفا کد پستی را بدون خط فاصله وارد نمایید</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="paymentResultToolbarTitle">نتیجه پرداخت</string>
    <string name="paymentSuccessfully">پرداخت با موفقیت انجام شد!</string>
    <string name="paymentFailed">پرداخت موفقیت آمیز نبود!</string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="amount">مبلغ</string>
    <string name="returnToHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="hostName">expertdevelopers.ir</string>
    <string name="firstNameError">لطفا نام خود را وارد کنید!</string>
    <string name="lastNameError">لطفا نام خانوادگی خود را وارد کنید!</string>
    <string name="phoneNumberError">شماره تلفن شما باید حتما 11 رقم باشد!</string>
    <string name="phoneNumberSchemeError">لطفا شماره تلفنتان را صحیح وارد کنید!</string>
    <string name="postalCardError">لطفا کد پستی خود را وارد کنید!</string>
    <string name="postalCardSchemeError">کد پستی شما باید حتما 10 رقم باشد!</string>
    <string name="addressError">لطفا آدرس خود را وارد نمایید!</string>
    <string name="addressSchemeError">آدرس شما باید بیش از 20 حرف باشد!</string>
    <string name="addressSchemeError2">آدرس شما نمی تواند بیش از 50 حرف باشد!</string>
    <string name="newUser">کاربر تازه وارد</string>
    <string name="signoutFromAccount">خروج از حساب کاربری</string>
    <string name="favoritesList">لیست علاقه مندی ها</string>
    <string name="profileEdit">ویرایش حساب کاربری</string>
    <string name="youSignOutFromAccount">شما با موفقیت از حساب کاربری خود خارج شدید!</string>
    <string name="signOutDialogTitle">خروج از حساب کاربری</string>
    <string name="signOutDialogMessage">آیا می خواهید از حساب کاربری خود خارج شوید؟</string>
    <string name="yes">بله</string>
    <string name="cancel">انصراف</string>
    <string name="version">نسخه 1.0.0</string>
    <string name="personalInformation">ویرایش اطلاعات فردی</string>
    <string name="age">سن</string>
    <string name="emailError">لطفا ایمیل خود را وارد نمایید!</string>
    <string name="wrongEmailError">لطفا ایمیل معتبر وارد نمایید!</string>
    <string name="ageError">لطفا سن خود را وارد نمایید!</string>
    <string name="saveInformation">ذخیره اطلاعات</string>
    <string name="savingUserInformationSuccessfully">اطلاعات شما با موفقیت ذخیره شد!</string>
    <string name="addComment">اضافه کردن نظر</string>
    <string name="title">عنوان</string>
    <string name="comment">نظر شما...</string>
    <string name="addingCommentSuccessfully">نظر شما با موفقیت ثبت گردید!</string>
    <string name="commentTitleError">لطفا عنوان نظر خود را وارد نمایید!</string>
    <string name="commentContentError">لطفا نظر خود را وارد نمایید!</string>
    <string name="deleteAllProductsFromFavoriteSuccessfully">تمامی محصولات با موفقیت از لیست علاقه مندی ها حذف شدند!</string>
    <string name="deleteProductFromFavoriteSuccessfully">محصول مورد نظر با موفقیت از لیست علاقه مندی ها حذف گردید!</string>
    <string name="nothingForShowInFavorites">هنوز چیزی جزو علاقه مندیات نبوده</string>
    <string name="orderId">شناسه سفارش</string>
    <string name="nothingForShowHereInSearch">چیزی پیدا نکردیم</string>
    <string name="nothingForShowInOrders">هنوز سفارشی ثبت نکردی</string>
    <string name="orderDetail">جزئیات سفارش</string>
    <string name="paymentMethod">روش پرداخت</string>
    <string name="paymentStatus">وضعیت پرداخت</string>
    <string name="deleteAllFavoritesTitle">حذف همه</string>
    <string name="addressHelperText">لطفا آدرس خود را بدون حرف اضافی وارد کنید</string>
    <string name="deleteAllFavoritesMessage">آیا می خواهید همه ی محصولات را از لیست علاقه مندی های خود حذف کنید؟</string>
    <string name="loadingImageIsFailure">مشکلی در بارگزاری تصویر به وجود آمد!</string>
    <string-array name="productSortArray">
        <item>@string/sortLatestProduct</item>
        <item>@string/sortPopularProduct</item>
        <item>@string/sortPriceHighToLowProduct</item>
        <item>@string/sortPriceLowToHighProduct</item>
    </string-array>

</resources>