<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight">

        <com.abproject.niky.customview.toolbarview.NikyToolbar
            android:id="@+id/toolbarProfileDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbarHeight"
            app:niky_toolbar_text="@string/personalInformation" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="@dimen/normalPadding"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normalMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="11">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber"
                    android:inputType="number"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:helperText="@string/postalCodeHelper"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postalCode"
                    android:inputType="number"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageTextInputLayout"
                style="@style/NikyTextInputLayoutStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                app:counterEnabled="true"
                app:counterMaxLength="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageTextInputEditText"
                    style="@style/NikyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:textAppearance="?textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveInformationMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/saveInformation" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>